--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -53,25 +44,29 @@
        " (44, 32): 2.7}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "wheel = b.Wheel(\n",
+    "  name='wheely',\n",
+    "  diameter=670,  \n",
+    "  )\n",
     "lyonsport = b.Bicycle(\n",
     "  name='Lyonsport', \n",
     "  front_cogs=[44, 34], \n",
     "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
-    "  wheel_diameter=670,\n",
     "  crank_length=170,\n",
+    "  wheels={'front': wheel, 'rear': wheel}\n",
     "  )\n",
-    "bike.gain_ratios()"
+    "lyonsport.gain_ratios()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -79,23 +74,23 @@
     {
      "data": {
       "text/plain": [
-       "{(32, 12): 5.3,\n",
-       " (32, 14): 4.5,\n",
-       " (32, 16): 3.9,\n",
-       " (32, 18): 3.5,\n",
-       " (32, 21): 3.0,\n",
-       " (32, 26): 2.4,\n",
-       " (32, 32): 2.0,\n",
-       " (42, 12): 6.9,\n",
-       " (42, 14): 5.9,\n",
-       " (42, 16): 5.2,\n",
-       " (42, 18): 4.6,\n",
-       " (42, 21): 3.9,\n",
-       " (42, 26): 3.2,\n",
-       " (42, 32): 2.6}"
+       "{(32, 12): 10.5,\n",
+       " (32, 14): 9.0,\n",
+       " (32, 16): 7.9,\n",
+       " (32, 18): 7.0,\n",
+       " (32, 21): 6.0,\n",
+       " (32, 26): 4.9,\n",
+       " (32, 32): 3.9,\n",
+       " (42, 12): 13.8,\n",
+       " (42, 14): 11.8,\n",
+       " (42, 16): 10.3,\n",
+       " (42, 18): 9.2,\n",
+       " (42, 21): 7.9,\n",
+       " (42, 26): 6.4,\n",
+       " (42, 32): 5.2}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
