--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -28,23 +28,23 @@
     {
      "data": {
       "text/plain": [
-       "{(34, 12): 5.6,\n",
-       " (34, 14): 4.8,\n",
-       " (34, 16): 4.2,\n",
-       " (34, 18): 3.7,\n",
-       " (34, 21): 3.2,\n",
-       " (34, 26): 2.6,\n",
-       " (34, 32): 2.1,\n",
-       " (44, 12): 7.2,\n",
-       " (44, 14): 6.2,\n",
-       " (44, 16): 5.4,\n",
-       " (44, 18): 4.8,\n",
-       " (44, 21): 4.1,\n",
-       " (44, 26): 3.3,\n",
-       " (44, 32): 2.7}"
+       "{(34, 12): 21.5,\n",
+       " (34, 14): 18.5,\n",
+       " (34, 16): 16.2,\n",
+       " (34, 18): 14.2,\n",
+       " (34, 21): 12.3,\n",
+       " (34, 26): 10.0,\n",
+       " (34, 32): 8.1,\n",
+       " (44, 12): 27.7,\n",
+       " (44, 14): 23.8,\n",
+       " (44, 16): 20.8,\n",
+       " (44, 18): 18.5,\n",
+       " (44, 21): 15.8,\n",
+       " (44, 26): 12.7,\n",
+       " (44, 32): 10.4}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,17 +56,17 @@
     "  )\n",
     "lyonsport = b.Bicycle(\n",
     "  name='Lyonsport', \n",
-    "  front_cogs=[44, 34], \n",
-    "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
+    "  cogs={'front': [44, 34], 'rear': [12, 14, 16, 18, 21, 26, 32]},\n",
     "  crank_length=170,\n",
     "  wheels={'front': wheel, 'rear': wheel}\n",
     "  )\n",
-    "lyonsport.gain_ratios()"
+    "lyonsport.gain_ratios()\n",
+    "lyonsport.cadence_to_speeds(60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -74,31 +74,54 @@
     {
      "data": {
       "text/plain": [
-       "{(32, 12): 10.5,\n",
-       " (32, 14): 9.0,\n",
-       " (32, 16): 7.9,\n",
-       " (32, 18): 7.0,\n",
-       " (32, 21): 6.0,\n",
-       " (32, 26): 4.9,\n",
-       " (32, 32): 3.9,\n",
-       " (42, 12): 13.8,\n",
-       " (42, 14): 11.8,\n",
-       " (42, 16): 10.3,\n",
-       " (42, 18): 9.2,\n",
-       " (42, 21): 7.9,\n",
-       " (42, 26): 6.4,\n",
-       " (42, 32): 5.2}"
+       "{(26, 12): 4.2,\n",
+       " (26, 14): 3.6,\n",
+       " (26, 16): 3.2,\n",
+       " (26, 18): 2.8,\n",
+       " (26, 21): 2.4,\n",
+       " (26, 26): 2.0,\n",
+       " (26, 32): 1.6,\n",
+       " (42, 12): 6.9,\n",
+       " (42, 14): 5.9,\n",
+       " (42, 16): 5.1,\n",
+       " (42, 18): 4.6,\n",
+       " (42, 21): 3.9,\n",
+       " (42, 26): 3.2,\n",
+       " (42, 32): 2.6}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "proto = deepcopy(lyonsport)\n",
-    "proto.front_cogs = [32, 42]\n",
+    "proto.crank_length = 171\n",
+    "proto.front_cogs = [26, 42]\n",
     "proto.gain_ratios()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.4285714285714284, 2.3333333333333335)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "34/14, 42/18"
    ]
   },
   {
