--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -28,23 +28,23 @@
     {
      "data": {
       "text/plain": [
-       "{(34, 12): 21.5,\n",
-       " (34, 14): 18.5,\n",
-       " (34, 16): 16.2,\n",
-       " (34, 18): 14.2,\n",
-       " (34, 21): 12.3,\n",
-       " (34, 26): 10.0,\n",
-       " (34, 32): 8.1,\n",
-       " (44, 12): 27.7,\n",
-       " (44, 14): 23.8,\n",
-       " (44, 16): 20.8,\n",
-       " (44, 18): 18.5,\n",
-       " (44, 21): 15.8,\n",
-       " (44, 26): 12.7,\n",
-       " (44, 32): 10.4}"
+       "{(34, 12): 0.9,\n",
+       " (34, 14): 1.1,\n",
+       " (34, 16): 1.2,\n",
+       " (34, 18): 1.4,\n",
+       " (34, 21): 1.6,\n",
+       " (34, 26): 2.0,\n",
+       " (34, 32): 2.5,\n",
+       " (44, 12): 0.7,\n",
+       " (44, 14): 0.8,\n",
+       " (44, 16): 1.0,\n",
+       " (44, 18): 1.1,\n",
+       " (44, 21): 1.3,\n",
+       " (44, 26): 1.6,\n",
+       " (44, 32): 1.9}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,17 +56,19 @@
     "  )\n",
     "lyonsport = b.Bicycle(\n",
     "  name='Lyonsport', \n",
-    "  cogs={'front': [44, 34], 'rear': [12, 14, 16, 18, 21, 26, 32]},\n",
+    "  front_cogs=[44, 34], \n",
+    "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
     "  crank_length=170,\n",
-    "  wheels={'front': wheel, 'rear': wheel}\n",
+    "  rear_wheel=wheel,\n",
     "  )\n",
-    "lyonsport.gain_ratios()\n",
-    "lyonsport.cadence_to_speeds(60)"
+    "lyonsport.gain_ratios(1)\n",
+    "lyonsport.cadence_to_speeds(1, 1)\n",
+    "lyonsport.speed_to_cadences(20, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -74,23 +76,23 @@
     {
      "data": {
       "text/plain": [
-       "{(26, 12): 4.2,\n",
-       " (26, 14): 3.6,\n",
-       " (26, 16): 3.2,\n",
-       " (26, 18): 2.8,\n",
-       " (26, 21): 2.4,\n",
-       " (26, 26): 2.0,\n",
-       " (26, 32): 1.6,\n",
-       " (42, 12): 6.9,\n",
-       " (42, 14): 5.9,\n",
-       " (42, 16): 5.1,\n",
-       " (42, 18): 4.6,\n",
-       " (42, 21): 3.9,\n",
-       " (42, 26): 3.2,\n",
-       " (42, 32): 2.6}"
+       "{(26, 12): 2.2,\n",
+       " (26, 14): 1.9,\n",
+       " (26, 16): 1.6,\n",
+       " (26, 18): 1.4,\n",
+       " (26, 21): 1.2,\n",
+       " (26, 26): 1.0,\n",
+       " (26, 32): 0.8,\n",
+       " (42, 12): 3.5,\n",
+       " (42, 14): 3.0,\n",
+       " (42, 16): 2.6,\n",
+       " (42, 18): 2.3,\n",
+       " (42, 21): 2.0,\n",
+       " (42, 26): 1.6,\n",
+       " (42, 32): 1.3}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,8 @@
     "proto = deepcopy(lyonsport)\n",
     "proto.crank_length = 171\n",
     "proto.front_cogs = [26, 42]\n",
-    "proto.gain_ratios()"
+    "proto.gain_ratios(1)\n",
+    "proto.gear_ratios(1)"
    ]
   },
   {
