--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -76,38 +76,38 @@
     {
      "data": {
       "text/plain": [
-       "{(26, 12): 2.2,\n",
-       " (26, 14): 1.9,\n",
-       " (26, 16): 1.6,\n",
-       " (26, 18): 1.4,\n",
-       " (26, 21): 1.2,\n",
-       " (26, 26): 1.0,\n",
-       " (26, 32): 0.8,\n",
-       " (42, 12): 3.5,\n",
-       " (42, 14): 3.0,\n",
-       " (42, 16): 2.6,\n",
-       " (42, 18): 2.3,\n",
-       " (42, 21): 2.0,\n",
-       " (42, 26): 1.6,\n",
-       " (42, 32): 1.3}"
+       "{(28, 12): 4.6,\n",
+       " (28, 14): 3.9,\n",
+       " (28, 16): 3.4,\n",
+       " (28, 18): 3.0,\n",
+       " (28, 21): 2.6,\n",
+       " (28, 26): 2.1,\n",
+       " (28, 32): 1.7,\n",
+       " (42, 12): 6.9,\n",
+       " (42, 14): 5.9,\n",
+       " (42, 16): 5.1,\n",
+       " (42, 18): 4.6,\n",
+       " (42, 21): 3.9,\n",
+       " (42, 26): 3.2,\n",
+       " (42, 32): 2.6}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "proto = deepcopy(lyonsport)\n",
-    "proto.front_cogs = [26, 42]\n",
+    "proto.front_cogs = [28, 42]\n",
     "proto.crank_length = 171\n",
     "proto.gain_ratios(1)\n",
-    "proto.gear_ratios(1)"
+    "#proto.gear_ratios(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -115,16 +115,33 @@
     {
      "data": {
       "text/plain": [
-       "(2.4285714285714284, 2.3333333333333335)"
+       "{(26, 12): 4.4,\n",
+       " (26, 14): 3.8,\n",
+       " (26, 16): 3.3,\n",
+       " (26, 18): 2.9,\n",
+       " (26, 21): 2.5,\n",
+       " (26, 26): 2.0,\n",
+       " (26, 32): 1.6,\n",
+       " (36, 12): 6.1,\n",
+       " (36, 14): 5.2,\n",
+       " (36, 16): 4.6,\n",
+       " (36, 18): 4.1,\n",
+       " (36, 21): 3.5,\n",
+       " (36, 26): 2.8,\n",
+       " (36, 32): 2.3}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "34/14, 42/18"
+    "miyata = deepcopy(lyonsport)\n",
+    "miyata.front_cogs = [26, 36]\n",
+    "miyata.crank_length = 165\n",
+    "miyata.gain_ratios(1)\n",
+    "#proto.gear_ratios(1)"
    ]
   },
   {
