--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -28,23 +28,23 @@
     {
      "data": {
       "text/plain": [
-       "{(34, 12): 0.9,\n",
-       " (34, 14): 1.1,\n",
-       " (34, 16): 1.2,\n",
-       " (34, 18): 1.4,\n",
-       " (34, 21): 1.6,\n",
-       " (34, 26): 2.0,\n",
-       " (34, 32): 2.5,\n",
-       " (44, 12): 0.7,\n",
-       " (44, 14): 0.8,\n",
-       " (44, 16): 1.0,\n",
-       " (44, 18): 1.1,\n",
-       " (44, 21): 1.3,\n",
-       " (44, 26): 1.6,\n",
-       " (44, 32): 1.9}"
+       "{(34, 12): 5.6,\n",
+       " (34, 14): 4.8,\n",
+       " (34, 16): 4.2,\n",
+       " (34, 18): 3.7,\n",
+       " (34, 21): 3.2,\n",
+       " (34, 26): 2.6,\n",
+       " (34, 32): 2.1,\n",
+       " (46, 12): 7.6,\n",
+       " (46, 14): 6.5,\n",
+       " (46, 16): 5.7,\n",
+       " (46, 18): 5.0,\n",
+       " (46, 21): 4.3,\n",
+       " (46, 26): 3.5,\n",
+       " (46, 32): 2.8}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,19 +56,18 @@
     "  )\n",
     "lyonsport = b.Bicycle(\n",
     "  name='Lyonsport', \n",
-    "  front_cogs=[44, 34], \n",
+    "  front_cogs=[34, 46], \n",
     "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
     "  crank_length=170,\n",
     "  rear_wheel=wheel,\n",
     "  )\n",
-    "lyonsport.gain_ratios(1)\n",
-    "lyonsport.cadence_to_speeds(1, 1)\n",
-    "lyonsport.speed_to_cadences(20, 1)"
+    "#lyonsport.gear_ratios(1)\n",
+    "lyonsport.gain_ratios(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -76,13 +75,13 @@
     {
      "data": {
       "text/plain": [
-       "{(28, 12): 4.6,\n",
-       " (28, 14): 3.9,\n",
-       " (28, 16): 3.4,\n",
-       " (28, 18): 3.0,\n",
-       " (28, 21): 2.6,\n",
-       " (28, 26): 2.1,\n",
-       " (28, 32): 1.7,\n",
+       "{(30, 12): 4.9,\n",
+       " (30, 14): 4.2,\n",
+       " (30, 16): 3.7,\n",
+       " (30, 18): 3.3,\n",
+       " (30, 21): 2.8,\n",
+       " (30, 26): 2.3,\n",
+       " (30, 32): 1.8,\n",
        " (42, 12): 6.9,\n",
        " (42, 14): 5.9,\n",
        " (42, 16): 5.1,\n",
@@ -92,22 +91,22 @@
        " (42, 32): 2.6}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "proto = deepcopy(lyonsport)\n",
-    "proto.front_cogs = [28, 42]\n",
+    "proto.front_cogs = [30, 42]\n",
     "proto.crank_length = 171\n",
-    "proto.gain_ratios(1)\n",
-    "#proto.gear_ratios(1)"
+    "proto.gear_ratios(1)\n",
+    "proto.gain_ratios(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -115,33 +114,39 @@
     {
      "data": {
       "text/plain": [
-       "{(26, 12): 4.4,\n",
-       " (26, 14): 3.8,\n",
-       " (26, 16): 3.3,\n",
-       " (26, 18): 2.9,\n",
-       " (26, 21): 2.5,\n",
-       " (26, 26): 2.0,\n",
-       " (26, 32): 1.6,\n",
+       "{(24, 12): 4.1,\n",
+       " (24, 14): 3.5,\n",
+       " (24, 16): 3.0,\n",
+       " (24, 18): 2.7,\n",
+       " (24, 21): 2.3,\n",
+       " (24, 26): 1.9,\n",
+       " (24, 32): 1.5,\n",
        " (36, 12): 6.1,\n",
        " (36, 14): 5.2,\n",
        " (36, 16): 4.6,\n",
        " (36, 18): 4.1,\n",
        " (36, 21): 3.5,\n",
        " (36, 26): 2.8,\n",
-       " (36, 32): 2.3}"
+       " (36, 32): 2.3,\n",
+       " (48, 12): 8.1,\n",
+       " (48, 14): 7.0,\n",
+       " (48, 16): 6.1,\n",
+       " (48, 18): 5.4,\n",
+       " (48, 21): 4.6,\n",
+       " (48, 26): 3.7,\n",
+       " (48, 32): 3.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "miyata = deepcopy(lyonsport)\n",
-    "miyata.front_cogs = [26, 36]\n",
+    "miyata.front_cogs = [24, 36, 48]\n",
     "miyata.crank_length = 165\n",
-    "miyata.gain_ratios(1)\n",
-    "#proto.gear_ratios(1)"
+    "miyata.gain_ratios(1)\n"
    ]
   },
   {
