--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -2,31 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "from copy import deepcopy\n",
     "\n",
     "sys.path.append('../')\n",
-    "import bicycle as b"
+    "from bicycle_calculator.main import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,23 +24,44 @@
     {
      "data": {
       "text/plain": [
-       "{(34, 12): 21.5,\n",
-       " (34, 14): 18.5,\n",
-       " (34, 16): 16.2,\n",
-       " (34, 18): 14.2,\n",
-       " (34, 21): 12.3,\n",
-       " (34, 26): 10.0,\n",
-       " (34, 32): 8.1,\n",
-       " (44, 12): 27.7,\n",
-       " (44, 14): 23.8,\n",
-       " (44, 16): 20.8,\n",
-       " (44, 18): 18.5,\n",
-       " (44, 21): 15.8,\n",
-       " (44, 26): 12.7,\n",
-       " (44, 32): 10.4}"
+       "Nameless bicycle\n",
+       "================\n",
+       "front_cogs = []\n",
+       "rear_cogs = []\n",
+       "crank_length = None\n",
+       "head_tube_angle = None\n",
+       "fork_rake = None\n",
+       "\n",
+       "front_wheel = Nameless wheel\n",
+       "----------------------------\n",
+       "bsd = None\n",
+       "center_to_flange = {'right': None, 'left': None}\n",
+       "diameter = None\n",
+       "erd = None\n",
+       "flange_diameter = {'right': None, 'left': None}\n",
+       "name = None\n",
+       "num_crosses = 3\n",
+       "num_spokes = None\n",
+       "offset = 0\n",
+       "spoke_hole_diameter = 2.6\n",
+       "tire_width = None\n",
+       "\n",
+       "rear_wheel = Nameless wheel\n",
+       "----------------------------\n",
+       "bsd = None\n",
+       "center_to_flange = {'right': None, 'left': None}\n",
+       "diameter = None\n",
+       "erd = None\n",
+       "flange_diameter = {'right': None, 'left': None}\n",
+       "name = None\n",
+       "num_crosses = 3\n",
+       "num_spokes = None\n",
+       "offset = 0\n",
+       "spoke_hole_diameter = 2.6\n",
+       "tire_width = None"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -70,23 +81,23 @@
     {
      "data": {
       "text/plain": [
-       "{(34, 12): 5.6,\n",
-       " (34, 14): 4.8,\n",
-       " (34, 16): 4.2,\n",
-       " (34, 18): 3.7,\n",
-       " (34, 21): 3.2,\n",
-       " (34, 26): 2.6,\n",
-       " (34, 32): 2.1,\n",
-       " (46, 12): 7.6,\n",
-       " (46, 14): 6.5,\n",
-       " (46, 16): 5.7,\n",
-       " (46, 18): 5.0,\n",
-       " (46, 21): 4.3,\n",
-       " (46, 26): 3.5,\n",
-       " (46, 32): 2.8}"
+       "{(30, 12): 4.926470588235294,\n",
+       " (30, 14): 4.222689075630252,\n",
+       " (30, 16): 3.694852941176471,\n",
+       " (30, 18): 3.2843137254901964,\n",
+       " (30, 21): 2.8151260504201683,\n",
+       " (30, 26): 2.2737556561085976,\n",
+       " (30, 32): 1.8474264705882355,\n",
+       " (42, 12): 6.897058823529412,\n",
+       " (42, 14): 5.911764705882353,\n",
+       " (42, 16): 5.172794117647059,\n",
+       " (42, 18): 4.598039215686274,\n",
+       " (42, 21): 3.9411764705882355,\n",
+       " (42, 26): 3.1832579185520364,\n",
+       " (42, 32): 2.5863970588235294}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,17 +109,20 @@
     "  )\n",
     "lyonsport = Bicycle(\n",
     "  name='Lyonsport', \n",
-    "  cogs={'front': [44, 34], 'rear': [12, 14, 16, 18, 21, 26, 32]},\n",
+    "  front_cogs=[42, 30], \n",
+    "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
     "  crank_length=170,\n",
-    "  wheels={'front': wheel, 'rear': wheel}\n",
+    "  front_wheel=wheel,\n",
+    "  rear_wheel=wheel,\n",
     "  )\n",
-    "lyonsport.gain_ratios()\n",
-    "lyonsport.cadence_to_speeds(60)"
+    "\n",
+    "gain_ratios(lyonsport)\n",
+    "#lyonsport.cadence_to_speeds(60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -116,38 +130,43 @@
     {
      "data": {
       "text/plain": [
-       "{(30, 12): 4.9,\n",
-       " (30, 14): 4.2,\n",
-       " (30, 16): 3.7,\n",
-       " (30, 18): 3.3,\n",
-       " (30, 21): 2.8,\n",
-       " (30, 26): 2.3,\n",
-       " (30, 32): 1.8,\n",
-       " (42, 12): 6.9,\n",
-       " (42, 14): 5.9,\n",
-       " (42, 16): 5.1,\n",
-       " (42, 18): 4.6,\n",
-       " (42, 21): 3.9,\n",
-       " (42, 26): 3.2,\n",
-       " (42, 32): 2.6}"
+       "{(26, 12): 4.269607843137255,\n",
+       " (26, 14): 3.6596638655462184,\n",
+       " (26, 16): 3.202205882352941,\n",
+       " (26, 18): 2.84640522875817,\n",
+       " (26, 21): 2.4397759103641454,\n",
+       " (26, 26): 1.9705882352941175,\n",
+       " (26, 32): 1.6011029411764706,\n",
+       " (36, 12): 5.911764705882352,\n",
+       " (36, 14): 5.067226890756302,\n",
+       " (36, 16): 4.4338235294117645,\n",
+       " (36, 18): 3.941176470588235,\n",
+       " (36, 21): 3.3781512605042017,\n",
+       " (36, 26): 2.728506787330317,\n",
+       " (36, 32): 2.2169117647058822,\n",
+       " (40, 12): 6.568627450980393,\n",
+       " (40, 14): 5.630252100840337,\n",
+       " (40, 16): 4.926470588235294,\n",
+       " (40, 18): 4.379084967320262,\n",
+       " (40, 21): 3.753501400560224,\n",
+       " (40, 26): 3.0316742081447967,\n",
+       " (40, 32): 2.463235294117647}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "proto = deepcopy(lyonsport)\n",
-    "proto.front_cogs = [30, 42]\n",
-    "proto.crank_length = 171\n",
-    "proto.front_cogs = [26, 42]\n",
-    "proto.gain_ratios()"
+    "miyata = lyonsport.copy()\n",
+    "miyata.front_cogs = [26, 36, 40]\n",
+    "gain_ratios(miyata)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -155,40 +174,49 @@
     {
      "data": {
       "text/plain": [
-       "{(24, 12): 4.1,\n",
-       " (24, 14): 3.5,\n",
-       " (24, 16): 3.0,\n",
-       " (24, 18): 2.7,\n",
-       " (24, 21): 2.3,\n",
-       " (24, 26): 1.9,\n",
-       " (24, 32): 1.5,\n",
-       " (36, 12): 6.1,\n",
-       " (36, 14): 5.2,\n",
-       " (36, 16): 4.6,\n",
-       " (36, 18): 4.1,\n",
-       " (36, 21): 3.5,\n",
-       " (36, 26): 2.8,\n",
-       " (36, 32): 2.3,\n",
-       " (48, 12): 8.1,\n",
-       " (48, 14): 7.0,\n",
-       " (48, 16): 6.1,\n",
-       " (48, 18): 5.4,\n",
-       " (48, 21): 4.6,\n",
-       " (48, 26): 3.7,\n",
-       " (48, 32): 3.0}"
+       "{(24, 12): 4.0606060606060606,\n",
+       " (24, 14): 3.4805194805194803,\n",
+       " (24, 16): 3.0454545454545454,\n",
+       " (24, 18): 2.707070707070707,\n",
+       " (24, 21): 2.3203463203463204,\n",
+       " (24, 26): 1.8741258741258742,\n",
+       " (24, 32): 1.5227272727272727,\n",
+       " (35, 12): 5.921717171717172,\n",
+       " (35, 14): 5.075757575757576,\n",
+       " (35, 16): 4.441287878787879,\n",
+       " (35, 18): 3.947811447811448,\n",
+       " (35, 21): 3.383838383838384,\n",
+       " (35, 26): 2.733100233100233,\n",
+       " (35, 32): 2.2206439393939394,\n",
+       " (43, 12): 7.275252525252525,\n",
+       " (43, 14): 6.235930735930736,\n",
+       " (43, 16): 5.456439393939394,\n",
+       " (43, 18): 4.8501683501683495,\n",
+       " (43, 21): 4.157287157287157,\n",
+       " (43, 26): 3.3578088578088576,\n",
+       " (43, 32): 2.728219696969697}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "miyata = deepcopy(lyonsport)\n",
-    "miyata.front_cogs = [24, 36, 48]\n",
-    "miyata.crank_length = 165\n",
-    "miyata.gain_ratios(1)\n"
+    "rivendell = lyonsport.copy()\n",
+    "rivendell.front_cogs = [24, 35, 43]\n",
+    "rivendell.crank_length = 165\n",
+    "gain_ratios(rivendell)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
