--- a/ipynb/prototyping.ipynb
+++ b/ipynb/prototyping.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
     "sys.path.append('../')\n",
-    "from bicycle_calculator.main import *"
+    "\n",
+    "from bicyclator.main import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -61,7 +58,7 @@
        "tire_width = None"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,31 +70,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(30, 12): 4.926470588235294,\n",
-       " (30, 14): 4.222689075630252,\n",
-       " (30, 16): 3.694852941176471,\n",
-       " (30, 18): 3.2843137254901964,\n",
-       " (30, 21): 2.8151260504201683,\n",
-       " (30, 26): 2.2737556561085976,\n",
-       " (30, 32): 1.8474264705882355,\n",
-       " (42, 12): 6.897058823529412,\n",
-       " (42, 14): 5.911764705882353,\n",
-       " (42, 16): 5.172794117647059,\n",
-       " (42, 18): 4.598039215686274,\n",
-       " (42, 21): 3.9411764705882355,\n",
-       " (42, 26): 3.1832579185520364,\n",
-       " (42, 32): 2.5863970588235294}"
+       "{(28, 12): 4.591617933723197,\n",
+       " (28, 14): 3.9356725146198834,\n",
+       " (28, 16): 3.443713450292398,\n",
+       " (28, 18): 3.0610786224821314,\n",
+       " (28, 21): 2.6237816764132553,\n",
+       " (28, 26): 2.119208277103014,\n",
+       " (28, 32): 1.721856725146199,\n",
+       " (42, 12): 6.887426900584796,\n",
+       " (42, 14): 5.9035087719298245,\n",
+       " (42, 16): 5.165570175438597,\n",
+       " (42, 18): 4.591617933723197,\n",
+       " (42, 21): 3.9356725146198834,\n",
+       " (42, 26): 3.178812415654521,\n",
+       " (42, 32): 2.5827850877192984}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,13 +100,13 @@
    "source": [
     "wheel = Wheel(\n",
     "  name='wheely',\n",
-    "  diameter=670,  \n",
+    "  diameter=673,  \n",
     "  )\n",
     "lyonsport = Bicycle(\n",
     "  name='Lyonsport', \n",
-    "  front_cogs=[42, 30], \n",
+    "  front_cogs=[42, 28], \n",
     "  rear_cogs=[12, 14, 16, 18, 21, 26, 32],\n",
-    "  crank_length=170,\n",
+    "  crank_length=171,\n",
     "  front_wheel=wheel,\n",
     "  rear_wheel=wheel,\n",
     "  )\n",
@@ -123,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -167,9 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -244,9 +235,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
